--- a/index.html
+++ b/index.html
@@ -164,12 +164,10 @@
                                 <a href="#" data-goto-header data-goto=".follow" class="menu__link">Socials</a>
                             </li>
                             <li class="menu__item">
-                                <a href="./meme/" class="menu__link">meme generator</a>
+                                <a href="" class="menu__link">meme generator</a>
                             </li>
                             <li class="menu__item">
-                                <a target="_blank"
-                                    href="https://www.dextools.io/app/en/solana/pair-explorer/3LGJAJ9PqWrZQ7hSmPemJTyMDQBPRBUpE51FRP3kmsK6?t=1732155475865"
-                                    class="menu__link">dextools</a>
+                                <a target="_blank" href="" class="menu__link">MovePump</a>
                             </li>
                         </ul>
                     </nav>
@@ -192,15 +190,13 @@
                     <div class="hero__content">
                         <h1 class="hero__title">
                             <img src="images/title.png" alt="img">
-                            <span>Solana BOY</span>
+                            <span>Sui BOY</span>
                         </h1>
                         <div class="hero__actions">
-                            <a target="_blank"
-                                href="https://www.dextools.io/app/en/solana/pair-explorer/3LGJAJ9PqWrZQ7hSmPemJTyMDQBPRBUpE51FRP3kmsK6?t=1732155475865"
-                                class="hero__button hero__button--white"><img src="images/dext.webp" alt="logo"></a>
-                            <a target="_blank"
-                                href="https://dexscreener.com/solana/3lgjaj9pqwrzq7hsmpemjtymdqbprbupe51frp3kmsk6"
-                                class="hero__button hero__button--white">
+                            <a target="_blank" href="" class="hero__button hero__button--white">
+                                <img style="width: 35px;" src="images/BlueMove_logo.webp" alt="logo">
+                            </a>
+                            <a target="_blank" href="https://dexscreener.com/" class="hero__button hero__button--white">
                                 <img src="images/dex.png" alt="logo">
                             </a>
                             <a target="_blank" href="#" class="hero__button hero__button--white">
@@ -252,12 +248,12 @@
                         </div>
                         <div class="features__how-content">
                             <h2 class="features__how-title">
-                                How this will be the Billion dollar SOL meme
+                                How this will be the Billion dollar SUI meme
                             </h2>
                             <div class="features__how-items">
                                 <div class="features__how-item">
                                     <span>1</span>
-                                    <span>listing on pumpfun
+                                    <span>listing on MovePump
                                     </span>
                                 </div>
                                 <div class="features__how-item">
@@ -370,16 +366,10 @@
                             <a target="_blank" href="https://x.com/Hypeguyonsol_" class="footer__social-item button">
                                 <img src="fonts/x.svg" alt="Icon">
                             </a>
-                            <a target="_blank"
-                                href="https://dexscreener.com/solana/3lgjaj9pqwrzq7hsmpemjtymdqbprbupe51frp3kmsk6"
-                                class="footer__social-item button">
+                            <a target="_blank" href="https://dexscreener.com/" class="footer__social-item button">
                                 <img src="fonts/dex.svg" alt="Icon">
                             </a>
-                            <a target="_blank"
-                                href="https://www.dextools.io/app/en/solana/pair-explorer/3LGJAJ9PqWrZQ7hSmPemJTyMDQBPRBUpE51FRP3kmsK6?t=1732155475865"
-                                class="footer__social-item button">
-                                <img src="fonts/dex2.svg" alt="Icon">
-                            </a>
+
                         </div>
                     </div>
                     <div class="footer__bottom">
