--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <button type="button" class="menu__icon icon-menu"><span></span></button>
                 </div>
                 <div data-da=".menu__body, 991.98" class="header__actions">
-                    <a target="_blank" href="https://t.me/hypeguyportal" class="header__action button"><img
+                    <a target="_blank" href="https://t.me/HypeGuy_Sui" class="header__action button"><img
                             src="fonts/telegram.svg" alt="Telegram Icon"><span>Join Telegram</span></a>
                 </div>
             </div>
@@ -336,10 +336,10 @@
                                 Follow $HYPEGUY on social media
                             </h2>
                             <div class="follow__body-actions">
-                                <a target="_blank" href="https://t.me/hypeguyportal"
+                                <a target="_blank" href="https://t.me/HypeGuy_Sui"
                                     class="follow__body-button button button-black"><img src="fonts/telegram.svg"
                                         alt="Telegram Icon"><span>Telegram</span></a>
-                                <a target="_blank" href="https://x.com/Hypeguyonsol_"
+                                <a target="_blank" href="https://x.com/HypeGuy_Sui"
                                     class="follow__body-button button button-black"><img src="fonts/x_1.svg"
                                         alt="Twitter Icon"><span>Twitter/X</span></a>
                             </div>
@@ -360,10 +360,10 @@
                             <a target="_blank" href="#" class="footer__social-item button">
                                 <img src="fonts/okx.svg" alt="Icon">
                             </a>
-                            <a target="_blank" href="https://t.me/hypeguyportal" class="footer__social-item button">
+                            <a target="_blank" href="https://t.me/HypeGuy_Sui" class="footer__social-item button">
                                 <img src="fonts/tel.svg" alt="Icon">
                             </a>
-                            <a target="_blank" href="https://x.com/Hypeguyonsol_" class="footer__social-item button">
+                            <a target="_blank" href="https://x.com/HypeGuy_Sui" class="footer__social-item button">
                                 <img src="fonts/x.svg" alt="Icon">
                             </a>
                             <a target="_blank" href="https://dexscreener.com/" class="footer__social-item button">
