--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                             <span>Sui BOY</span>
                         </h1>
                         <div class="hero__actions">
-                            <a target="_blank" href="" class="hero__button hero__button--white">
+                            <a target="_blank"
+                                href="https://movepump.com/token/0xa9b2789970c2eba25e0b32813d57c835bab6c6e57b77b880d610ace19d2f1fb0::hypeguy::HYPEGUY"
+                                class="hero__button hero__button--white">
                                 <img style="width: 35px;" src="images/BlueMove_logo.webp" alt="logo">
                             </a>
                             <a target="_blank" href="https://dexscreener.com/" class="hero__button hero__button--white">
