--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <div class="tokenomics__number">
                             <div class="tokenomics__number-body">
                                 <div class="tokenomics__number-text">
-                                    Ax5ARi...TokoUvapump
+                                    0xa9b2...b0::hypeguy::HYPEGUY
                                 </div>
                                 <button type="button" class="tokenomics__number-button copy-ca-btn">
                                     <img src="fonts/copy.svg" alt="Icon">
