--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>$HYPEGUY ON SUI</title>
+    <title>$HYPEGUY ON PULSE</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <style>
@@ -167,7 +167,7 @@
                                 <a href="" class="menu__link">meme generator</a>
                             </li>
                             <li class="menu__item">
-                                <a target="_blank" href="" class="menu__link">MovePump</a>
+                                <a target="_blank" href="" class="menu__link">pump.tires</a>
                             </li>
                         </ul>
                     </nav>
@@ -190,11 +190,11 @@
                     <div class="hero__content">
                         <h1 class="hero__title">
                             <img src="images/title.png" alt="img">
-                            <span>Sui BOY</span>
+                            <span>PULSE BOY</span>
                         </h1>
                         <div class="hero__actions">
                             <a target="_blank"
-                                href="https://movepump.com/token/0xa9b2789970c2eba25e0b32813d57c835bab6c6e57b77b880d610ace19d2f1fb0::hypeguy::HYPEGUY"
+                                href="https://pump.tires"
                                 class="hero__button hero__button--white">
                                 <img style="width: 35px;" src="images/BlueMove_logo.webp" alt="logo">
                             </a>
@@ -250,12 +250,12 @@
                         </div>
                         <div class="features__how-content">
                             <h2 class="features__how-title">
-                                How this will be the Billion dollar SUI meme
+                                How this will be the Billion dollar PULSE meme
                             </h2>
                             <div class="features__how-items">
                                 <div class="features__how-item">
                                     <span>1</span>
-                                    <span>listing on MovePump
+                                    <span>listing on pump.tires
                                     </span>
                                 </div>
                                 <div class="features__how-item">
@@ -299,7 +299,7 @@
                         <div class="tokenomics__number">
                             <div class="tokenomics__number-body">
                                 <div class="tokenomics__number-text">
-                                    0xa9b2...b0::hypeguy::HYPEGUY
+                                    SOON
                                 </div>
                                 <button type="button" class="tokenomics__number-button copy-ca-btn">
                                     <img src="fonts/copy.svg" alt="Icon">
