--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <a target="_blank"
                                 href="https://pump.tires"
                                 class="hero__button hero__button--white">
-                                <img style="width: 35px;" src="images/BlueMove_logo.webp" alt="logo">
+                                <img style="width: 35px;" src="images/pump.png" alt="logo">
                             </a>
                             <a target="_blank" href="https://dexscreener.com/" class="hero__button hero__button--white">
                                 <img src="images/dex.png" alt="logo">
