--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 <a href="" class="menu__link">meme generator</a>
                             </li>
                             <li class="menu__item">
-                                <a target="_blank" href="" class="menu__link">pump.tires</a>
+                                <a target="_blank" href="https://pump.tires/token/0x01e88d5B527d79878E53758125d3dF8E6c1cF98D" class="menu__link">pump.tires</a>
                             </li>
                         </ul>
                     </nav>
@@ -194,7 +194,7 @@
                         </h1>
                         <div class="hero__actions">
                             <a target="_blank"
-                                href="https://pump.tires"
+                                href="https://pump.tires/token/0x01e88d5B527d79878E53758125d3dF8E6c1cF98D"
                                 class="hero__button hero__button--white">
                                 <img style="width: 35px;" src="images/pump.png" alt="logo">
                             </a>
@@ -299,7 +299,7 @@
                         <div class="tokenomics__number">
                             <div class="tokenomics__number-body">
                                 <div class="tokenomics__number-text">
-                                    SOON
+                                   0x01e88d5B527d79878E53758125d3dF8E6c1cF98D
                                 </div>
                                 <button type="button" class="tokenomics__number-button copy-ca-btn">
                                     <img src="fonts/copy.svg" alt="Icon">
